# ResonanceHistory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  world_compare.html  world_transitions.html
examples/: rome_to_renaissance.json
src/resonancehistory/: __init__.py  __main__.py
src/resonancehistory/agent/: historian.py  portraits.py
src/resonancehistory/analysis/: compare.py  predict.py  transitions.py
src/resonancehistory/data/: regions.py  schema.py
src/resonancehistory/render/: compare_renderer.py  graph_renderer.py  visualizer.py
templates/: compare.html  transitions.html  visualization.html
