[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonancehistory"
version = "0.1.0"
description = "Visualizing the echoes and cycles of human history across regions and time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
resonancehistory = "resonancehistory.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
